--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <p id="texto2"></p>
         
             <div>
-                <button id="botaoCopiar">Copiar</button>
+                <button id="botaoCopiar" class="botao_copiar">Copiar</button>
             </div>
         </section>
 
